GetClaimPerEquipState set10WorkLogInsert.name