@@ -4,12 +4,15 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
-import java.net.ProtocolException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.sql.CallableStatement;
 import java.sql.Connection;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.sql.Statement;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -23,55 +26,96 @@ import org.slf4j.LoggerFactory;
 import ru.ikss.jiratask.Config;
 import ru.ikss.jiratask.DAO;
 
-public class ClaimProject extends Project {
+public class ClaimProject {
 
     private static final Logger log = LoggerFactory.getLogger(ClaimProject.class);
-    private static final String GET_TIME = "select ProblemsGetLastActionInfoDate()";
-    private static final String INSERT_DATA = "select InsertProblems(?)";
+    private static final String GET_TIME_PROBLEMS = "select ProblemsGetLastActionInfoDate()";
+    private static final String GET_TIME_PER_EQUIP = "select date_begin, date_end from ClaimPerEquipGetDates()";
+    private static final String INSERT_PROBLEMS = "select InsertProblems(?)";
+    private static final String INSERT_PER_EQUIP = "select InsertClaimPerEquip(?)";
+    private static final String UTF_8 = "UTF-8";
+    private String logonUrl;
+    private String httpUrl;
 
-    @Override
-    public void handleTasks() {
-        log.trace("Handle project {}", this.toString());
+    public ClaimProject() {
         try {
-            DateTime lastTime = getLastTime();
+            String login = URLEncoder.encode(Config.getInstance().getValue("claim.login", "user"), UTF_8);
+            String pwd = URLEncoder.encode(Config.getInstance().getValue("claim.pwd", ""), UTF_8);
+            httpUrl = Config.getInstance().getValue("claim.url", "http://crm-beta.crystals.ru/WS/ClaimServiceAU.asmx");
+            logonUrl = httpUrl + "/Logon?login=" + login + "&pass=" + pwd;
+        } catch (UnsupportedEncodingException e) {
+            log.error(this + "Error on define login/pwd: " + e.getMessage(), e);
+        }
+
+    }
+
+    public void getProblems() {
+        log.trace("Handle Claim Problems");
+        try {
+            DateTime lastTime = DAO.I.getTime(GET_TIME_PROBLEMS);
             DateTimeFormatter datePattern = DateTimeFormat.forPattern("yyyy-MM-dd'T'HH:mm:ss");
             String from = lastTime.toString(datePattern);
             String to = new DateTime().toString(datePattern);
 
-            String login = URLEncoder.encode(Config.getInstance().getValue("claim.login", "user"), "UTF-8");
-            String pwd = URLEncoder.encode(Config.getInstance().getValue("claim.pwd", ""), "UTF-8");
-
             List<String> cookies = new ArrayList<>();
-
-            String httpUrl = Config.getInstance().getValue("claim.url", "http://crm-beta.crystals.ru/WS/ClaimServiceAU.asmx");
-
-            String logonUrl = httpUrl + "/Logon?login=" + login + "&pass=" + pwd;
             String answer = open(new URL(logonUrl), cookies);
             log.trace(answer);
 
-            String getProblemsUrl =
+            String url =
                     httpUrl + "/GetProblems" + "?" +
-                        "fm=" + URLEncoder.encode(from, "UTF-8") +
-                        "&to=" + URLEncoder.encode(to, "UTF-8") +
+                        "fm=" + URLEncoder.encode(from, UTF_8) +
+                        "&to=" + URLEncoder.encode(to, UTF_8) +
                         "&deptID=" + Config.getInstance().getValue("claim.deptID", "-1") +
                         "&emptyLongFields=" + "1".equals(Config.getInstance().getValue("claim.emptyLongFields", "1"));
-            String xml = open(new URL(getProblemsUrl), cookies);
-            if (xml != null) {
-                log.trace("xml size = " + xml.length());
-                try (Connection con = DAO.I.getConnection();
-                        CallableStatement st = con.prepareCall(INSERT_DATA)) {
-                    st.setString(1, xml);
-                    st.execute();
-                }
-            } else {
-                log.warn(this + "No data");
-            }
+            retrieveData(cookies, url, INSERT_PROBLEMS);
         } catch (Exception e) {
-            log.error(this + "Error on handling project", e);
+            log.error(this + "Error on handling Claim Problems: " + e.getMessage(), e);
         }
     }
 
-    private String open(URL url, List<String> cookies) throws IOException, ProtocolException {
+    public void getClaimPerEquip() {
+        log.trace("Handle Claim Per Equip");
+        try {
+            DateTimeFormatter datePattern = DateTimeFormat.forPattern("yyyy-MM-dd'T'HH:mm:ss");
+            String from = null;
+            String to = null;
+            try (Statement st = DAO.I.getConnection().createStatement(); ResultSet rs = st.executeQuery(GET_TIME_PER_EQUIP)) {
+                if (rs.next()) {
+                    from = new DateTime(rs.getTimestamp(1)).toString(datePattern);
+                    to = new DateTime(rs.getTimestamp(2)).toString(datePattern);
+                }
+            }
+            List<String> cookies = new ArrayList<>();
+            String answer = open(new URL(logonUrl), cookies);
+            log.trace(answer);
+
+            String url =
+                    httpUrl + "/GetClaimPerEquipState" + "?" +
+                        "fm=" + URLEncoder.encode(from, UTF_8) +
+                        "&to=" + URLEncoder.encode(to, UTF_8) +
+                        "&ids=" + Config.getInstance().getValue("claim.ids", "-1");
+            retrieveData(cookies, url, INSERT_PER_EQUIP);
+        } catch (Exception e) {
+            log.error(this + "Error on handling Claim Per Equip: " + e.getMessage(), e);
+        }
+    }
+
+    private void retrieveData(List<String> cookies, String url, String insertData)
+        throws IOException, SQLException {
+        String xml = open(new URL(url), cookies);
+        if (xml != null) {
+            log.trace("xml size = {}", xml.length());
+            try (Connection con = DAO.I.getConnection();
+                    CallableStatement st = con.prepareCall(insertData)) {
+                st.setString(1, xml);
+                st.execute();
+            }
+        } else {
+            log.warn("{} No data", this);
+        }
+    }
+
+    private String open(URL url, List<String> cookies) throws IOException {
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("GET");
         connection.addRequestProperty("Cookie", cookies.stream().map(c -> c.split("~", 2)[0]).collect(Collectors.joining(";")));
@@ -104,10 +148,4 @@ public class ClaimProject extends Project {
             return null;
         }
     }
-
-    @Override
-    public String getTimeQuery() {
-        return GET_TIME;
-    }
-
 }
